--- a/src/pages/NewIncident/styles.css
+++ b/src/pages/NewIncident/styles.css
@@ -11,7 +11,7 @@
 .new-incident-container .content{
     width: 100%;
     padding: 96px;
-    background: #dbdbdb;
+    background: #1D344B;
     box-shadow: 0 0 100px rgba(0,  0, 0, 0.4);
     border-radius: 8px;
     display: flex;
@@ -25,13 +25,13 @@
 }
 
 .new-incident-container .content section h1 {
-    color: rgb(32, 32, 32);
+    color: #F0F8FF;
     margin: 64px 0 32px;
     font-size: 32px;
 }
 
 .new-incident-container .content section p {
-    color: #737380;
+    color: #CDCECF;
     font-size: 18px;
     line-height: 32px;
 }
